<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filmDescription">

    <TextView
        android:id="@+id/titrefilm"
        android:layout_width="165dp"
        android:layout_height="62dp"
        android:layout_marginTop="44dp"
        android:text="TextView"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollviewfilm"
        android:layout_width="373dp"
        android:layout_height="554dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descriptionlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description:"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>

            <TextView

                android:id="@+id/descriptionfilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="blabal"
                android:textSize="18dp"></TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="272dp"
                android:src="@mipmap/cloud"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/realisateurlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/realisateur"
                    android:textSize="20dp"></TextView>

                <TextView
                    android:textSize="18dp"
                    android:id="@+id/realisateur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bruh"
                    android:translationX="28dp"></TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/producteurlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directeur"
                    android:textSize="20dp"
                    ></TextView>

                <TextView
                    android:id="@+id/producteur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bruh"
                    android:textSize="18dp"
                    android:translationX="49dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/acteurlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acteur"
                    android:textSize="20dp"

                    ></TextView>

                <TextView
                    android:id="@+id/acteurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bruh"
                    android:translationX="60dp"
                    android:textSize="18dp"
                    ></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genrelabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textSize="20dp"
                    ></TextView>

                <TextView
                    android:id="@+id/genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bruh"
                    android:translationX="74dp"
                    android:textSize="18dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/anneelabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annnee"
                    android:textSize="20dp"></TextView>

                <TextView
                    android:id="@+id/annees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bruh"
                    android:translationX="70dp"
                    android:textSize="18dp"></TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="87dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/homeicone_foreground" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="413dp"
        android:layout_height="71dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollviewfilm"
        app:menu="@menu/navigation"/>
</androidx.constraintlayout.widget.ConstraintLayout>